[package]
name = "hmny"
version = "0.0.1-dev"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[workspace]
members = [
    "crates/*",
    "wraps/homescreen",
    "wraps/mimetypes/*",
    "wraps/test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_framepace = "0.13.3"
hmny_common = { path = "./crates/common" }
notify = "6.0.1"
url = "2.4.0"
pango = "0.18.0"
cairo-rs = "0.18.0"
pangocairo = "0.18.0"
yeslogic-fontconfig-sys = "4.0.1"
unic = "0.9.0"
polywrap = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
