[package]
edition = "2021"
name = "hmny"
version = "0.0.1-dev"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = [
  "crates/*",
  "wraps/homescreen",
  "wraps/mimetypes/*",
  "wraps/test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_framepace = "0.13.3"
cairo-rs = "0.18.0"
hmny_common = {path = "./crates/common"}
notify = "6.0.1"
pango = "0.18.0"
pangocairo = "0.18.0"
unic = "0.9.0"
url = "2.4.0"
wasmer = {version = "4.1.1"}
yeslogic-fontconfig-sys = "4.0.1"
