[package]
edition = "2021"
name = "hmny_common"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["homescreen", "mimetype"]
homescreen = []
mimetype = []

[dependencies]
bevy_math = "0.11.2"
bincode = {git = "https://github.com/bincode-org/bincode.git", rev = "aada4bb4cb457677a4b8e47572ae7ca8dd44927c"}
hmny_macros = {path = "../macros"}
