[package]
edition = "2021"
name = "hmny_common"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["homescreen", "mimetype"]
homescreen = []
mimetype = []

[dependencies]
bevy_math = "0.12.1"
bincode = {git = "https://github.com/bincode-org/bincode.git", rev = "980e4029552e416c1fd2f0699a78d33562b33966"}
hmny_macros = {path = "../macros"}
