[package]
edition = "2021"
name = "hmny_launcher"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.5"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.5", features = ["window-show"]}
tokio = {version = "1.35", features = ["process"]}
uuid = {version = "1.6", features = ["serde", "v4"]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
