[package]
name = "test_wrap"
version = "0.0.1-dev"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
polywrap-wasm-rs = { version = "0.12.0" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polywrap = { version = "0.1.9-beta.2" }
