[package]
name = "mimetype_txt"
version = "0.0.1-dev"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
bevy = { version = "0.11.0", features = ["serialize"] }
hmny_common = { path = "../../../crates/common" }
