[package]
edition = "2021"
name = "mimetype_markdown"
version = "0.0.1-dev"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
hmny_common = {path = "../../../crates/common", default-features = false, features = ["mimetype"]}
markdown = "1.0.0-alpha.12"
